<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingRight="@dimen/_20sdp"
    android:paddingLeft="@dimen/_10sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contactInfoTV"
            style="@style/textViewNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_info"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/deleteChatTV"
            style="@style/textViewNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/delete_chat"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/clearChatTV"
            style="@style/textViewNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/clear_chat"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

</RelativeLayout>