<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clToolBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="horizontal"
            android:elevation="@dimen/_4sdp"
            android:background="@color/colorBackgroundToolBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/aivBack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:tint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/aivCreateGroup"
                android:layout_width="0dp"
                style="@style/textViewHeadingTitle"
                android:layout_height="wrap_content"
                android:text="@string/str_profile"
                android:textSize="@dimen/_16ssp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@+id/aivBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clToolBar">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/profilePictureIV"
                android:src="@drawable/ic_placeholder_profile" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.3"
                android:background="@drawable/ic_group_bg"
                android:backgroundTint="@color/black">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_white_camera" />
            </FrameLayout>

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/bg_search_solid_rectangle"
            android:elevation="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/str_enter_name"
            android:paddingHorizontal="@dimen/_12sdp"
            android:textColor="@color/colorTextLabel"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_profile_info"
            android:textColor="@color/colorBackroundDisable"
            android:textSize="@dimen/_12ssp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:text="@string/str_save"
            android:textColor="@color/white"
            android:fontFamily="@font/opensans_bold"
            android:background="@drawable/custom_button_disable"
            android:layout_marginBottom="@dimen/_4sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>